# docs/swagger.json
@@ -6,7 +6,7 @@
         "license": {
             "name": "Apache 2.0"
         },
-        "version": "0.4.3"
+        "version": "0.4.4"
     },
     "paths": {
         "/get": {
@@ -24,7 +24,7 @@
                 "summary": "从remote端拉取文件到server端",
                 "parameters": [
                     {
-                        "description": "远端ep和文件路径",
+                        "description": "remote -\u003e server",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -58,7 +58,7 @@
                 "summary": "从remote端获取文件列表",
                 "parameters": [
                     {
-                        "description": "远端ep和文件路径",
+                        "description": "remote -\u003e server",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -92,7 +92,7 @@
                 "summary": "从server端put文件到client端",
                 "parameters": [
                     {
-                        "description": "client and server file",
+                        "description": "server -\u003e client",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -116,19 +116,20 @@
         "endpoint.GetRequest": {
             "type": "object",
             "properties": {
-                "ip": {
-                    "type": "string"
-                },
-                "localPath": {
-                    "type": "string"
-                },
-                "passwd": {
-                    "type": "string"
-                },
                 "remoteFilePath": {
+                    "description": "must abs path",
                     "type": "string"
                 },
-                "user": {
+                "remoteIp": {
+                    "type": "string"
+                },
+                "remotePasswd": {
+                    "type": "string"
+                },
+                "remoteUser": {
+                    "type": "string"
+                },
+                "srcDir": {
                     "type": "string"
                 }
             }
@@ -147,16 +148,16 @@
         "endpoint.ListRequest": {
             "type": "object",
             "properties": {
-                "ip": {
-                    "type": "string"
-                },
-                "passwd": {
-                    "type": "string"
-                },
                 "remoteFilePath": {
                     "type": "string"
                 },
-                "user": {
+                "remoteIp": {
+                    "type": "string"
+                },
+                "remotePasswd": {
+                    "type": "string"
+                },
+                "remoteUser": {
                     "type": "string"
                 }
             }
